# local-json-hero

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
app/components/Preview/Types/: PreviewString.tsx
app/desktop/: jsonFile.worker.ts  localFiles.ts  main.tsx  remix-shim.tsx  types.ts
app/routes/: index.tsx
desktop/: index.html
desktop/src/: main.tsx
scripts/: release-macos.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
