[package]
name = "local-json-hero"
version = "0.1.0"
description = "A local macOS desktop viewer for JSONHero-style JSON browsing."
authors = ["JSONHero contributors"]
edition = "2021"

[lib]
name = "local_json_hero_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
